2008-06-18  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	Caution: XML parser options and exmpp_xmlstream API changed!

	* src/core/exmpp_xml.erl, testsuite/check_xml_parser.erl: Options
	handling was revised a lot:
	    o  Options are now real "proplists". It means that all options
	       starting with "no_" doesn't exist anymore. They're almost all
	       replaced by a tuple '{Key, false}'.
	    o  Previous options are kept in the #xml_parser record.
	    o  A new function reset_parser/2 allows one to change parser
	       options and reset its parsing state.
	This will be useful to get exmpp_xml:start/1 out of
	exmpp_xmlstream:start/{1,2,3}. Also, options documentation was
	updated.

	* src/core/exmpp_xml.erl, c_src/exmpp_xml_expat.c: Rename the few
	remaining occurences of "endelement" to "endtag".

	* src/core/exmpp_xmlstream.erl, testsuite/check_xmlstream.erl: From
	now on, the XML parser must be created by the caller and passed to
	exmpp_xmlstream:start/{2,3}. This allow the caller to control the
	parser; for instance, he can add known names, namespaces or
	attributes. He is responsible to stop the parser and can use the new
	get_parser/1 to get it back. start/1 was removed and stop/1 is now a
	NOOP (but is kept for potential future changes).

	* src/network/exmpp_session.erl: Sync with last exmpp_xmlstream
	changes.

2008-06-17  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* testsuite/Makefile.am: Fix th ERL_FILES and BEAM_FILES: it was
	missing the 'testsuite' module. Fix the command that copy test.sh to
	the final test script: if the script didn't exist before, the copy was
	not made.

	* src/core/exmpp_xml.erl, c_src/exmpp_xml_expat.c,
	c_src/exmpp_expat.c, c_src/Makefile.am, c_src/Makefile.unix,
	c_src/Makefile.win32: Rename exmpp_expat to exmpp_xml_expat. The new
	name use the same model than exmpp_tls_[engine] and
	exmpp_compress_[engine].

	* c_src/Makefile.am: Use a custom directory prefix (execdrivers) to