@@ -12,6 +12,8 @@
 		'@srcdir@/core/exmpp_stanza',
 		'@srcdir@/core/exmpp_stream',
 		'@srcdir@/core/exmpp_iq',
+		'@srcdir@/core/exmpp_message',
+		'@srcdir@/core/exmpp_presence',
 		'@srcdir@/core/exmpp_tls',
 		'@srcdir@/core/exmpp_compress',
 		'@srcdir@/network/exmpp_callbacks',
